# Project-JPO-Gotowy

./: CMakeLists.txt  README.md  Readme.txt  main.cpp
core/: AirQualityIndex.cpp  AirQualityIndex.h  Measurement.cpp  Measurement.h  Sensor.cpp  Sensor.h  Station.cpp  Station.h
data/: ApiHandler.cpp  ApiHandler.h  DatabaseManager.cpp  DatabaseManager.h  JsonbaseManager.cpp  JsonbaseManager.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
